--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 # Site navigation links
 
-- title:
-  url:
-  excerpt:
+- title: Articles
+  url: /articles/
+  excerpt: "A collection of thoughts, inspiration, mistakes, and other minutia."
   image:
